--- a/angular.json
+++ b/angular.json
@@ -26,9 +26,11 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
-            "scripts": []
+           
+            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js","node_modules/popper.js/dist/umd/popper.min.js"]
           },
           "configurations": {
             "production": {
