--- a/angular.json
+++ b/angular.json
@@ -27,10 +27,13 @@
             "styles": [
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.css",
-              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
             ],
            
-            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js","node_modules/popper.js/dist/umd/popper.min.js"]
+            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+            "node_modules/@fortawesome/fontawesome-free/js/all.min.js"
+          ]
           },
           "configurations": {
             "production": {
