--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css",
-              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+              "node_modules/@fortawesome/fontawesome-free/css/all.css"
             ],
            
             "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
