--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@angular/compiler": "^17.0.0",
     "@angular/core": "^17.0.0",
     "@angular/forms": "^17.0.0",
+    "@angular/material": "^17.0.4",
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@material/dialog": "^14.0.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
     "popper.js": "^1.16.1",
