--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css",
-              "node_modules/@fortawesome/fontawesome-free/css/all.css"
+              "node_modules/@fortawesome/fontawesome-free/css/all.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
            
             "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
